--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,18 @@
 
         <item name="android:windowContentTransitions" tools:targetApi="lollipop">true</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_round_arrow_back_24_dark</item>
+
+        <!-- Material Design components -->
+        <item name="materialButtonStyle">@style/Widget.CSE.Button</item>
+        <item name="textInputStyle">@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox
+        </item>
+        <item name="cardViewStyle">@style/Widget.MaterialComponents.CardView</item>
+    </style>
+
+    <style name="Widget.CSE.Button" parent="Widget.MaterialComponents.Button">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="cornerRadius">28dp</item>
     </style>
 
     <style name="AppTheme2" parent="Theme.AppCompat.Light.NoActionBar">
@@ -55,6 +67,7 @@
 
 
     </style>
+
     <style name="CollapsingToolbarLayoutTitleColor_Collapsed" parent="@android:style/TextAppearance.Medium">
         <item name="android:textColor">@color/text_color_dark</item>
         <item name="android:textSize">20sp</item>
@@ -77,5 +90,6 @@
         <item name="android:fontFamily">@font/nunito</item>
         <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/MainBack</item>
     </style>
+
 
 </resources>
