--- a/app/src/main/res/layout/activity_insert_class_.xml
+++ b/app/src/main/res/layout/activity_insert_class_.xml
@@ -62,82 +62,57 @@
         android:textSize="18dp"
         android:layout_marginTop="12dp"/>
 
-    <co.ceryle.radiorealbutton.library.RadioRealButtonGroup
-        android:id="@+id/group"
+    <RadioGroup
+        android:id="@+id/themeGroup"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        app:rrbg_bottomLineSize="0dp"
-        app:rrbg_selectorColor="@color/theme_light"
-        app:rrbg_selectorSize="6dp"
-        app:rrbg_selectorRadius="1dp"
-        app:rrbg_selectorBringToFront="true"
-        android:layout_marginRight="16dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginLeft="16dp"
-        app:rrbg_dividerSize="0dp"
-        app:rrbg_position="0"
-        app:rrbg_animateTexts_enter="decelerate"
-        app:rrbg_animateImages_enter="overshoot">
-        <co.ceryle.radiorealbutton.library.RadioRealButton
-            android:id="@+id/button1"
+        android:layout_marginRight="16dp"
+        android:padding="8dp">
+
+        <RadioButton
+            android:id="@+id/theme1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:rrb_image="@drawable/asset_bg_paleblue"
-            app:rrb_imageHeight="50dp"
-            app:rrb_imageWidth="36dp"
-            app:rrb_ripple="true"
-            app:rrb_rippleColor="@color/black"
-            />
-        <co.ceryle.radiorealbutton.library.RadioRealButton
-            android:id="@+id/button2"
+            android:button="@drawable/asset_bg_paleblue"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/theme2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:rrb_image="@drawable/asset_bg_green"
-            app:rrb_imageHeight="50dp"
-            app:rrb_imageWidth="36dp"
-            app:rrb_ripple="true"
-            app:rrb_rippleColor="@color/black"
-           />
-        <co.ceryle.radiorealbutton.library.RadioRealButton
-            android:id="@+id/button3"
+            android:button="@drawable/asset_bg_green"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/theme3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:rrb_image="@drawable/asset_bg_yellow"
-            app:rrb_imageHeight="50dp"
-            app:rrb_imageWidth="36dp"
-            app:rrb_ripple="true"
-            app:rrb_rippleColor="@color/black"
-            />
-        <co.ceryle.radiorealbutton.library.RadioRealButton
-            android:id="@+id/button4"
+            android:button="@drawable/asset_bg_yellow"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/theme4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:rrb_image="@drawable/asset_bg_palegreen"
-            app:rrb_imageHeight="36dp"
-            app:rrb_imageWidth="36dp"
-            app:rrb_ripple="true"
-            app:rrb_rippleColor="@color/black"
-            />
-        <co.ceryle.radiorealbutton.library.RadioRealButton
-            android:id="@+id/button5"
+            android:button="@drawable/asset_bg_palegreen"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/theme5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:rrb_image="@drawable/asset_bg_paleorange"
-            app:rrb_imageHeight="36dp"
-            app:rrb_imageWidth="36dp"
-            app:rrb_ripple="true"
-            app:rrb_rippleColor="@color/black"
-            />
-        <co.ceryle.radiorealbutton.library.RadioRealButton
-            android:id="@+id/button6"
+            android:button="@drawable/asset_bg_paleorange"
+            android:layout_marginEnd="8dp"/>
+
+        <RadioButton
+            android:id="@+id/theme6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:rrb_image="@drawable/asset_bg_white"
-            app:rrb_imageHeight="36dp"
-            app:rrb_imageWidth="36dp"
-            app:rrb_ripple="true"
-            app:rrb_rippleColor="@color/black"
-            />
-    </co.ceryle.radiorealbutton.library.RadioRealButtonGroup>
+            android:button="@drawable/asset_bg_white"/>
+
+    </RadioGroup>
 
     <Button
         android:id="@+id/button_createClass"
